Add string wrap style.

--- a/cn/styles/website.css
+++ b/cn/styles/website.css
@@ -1,3 +1,9 @@
 .gitbook-link {
     display: none !important;
 }
+
+.code-line {
+	white-space: pre-wrap; !important;
+    word-break: break-all !important;
+    word-wrap: break-word !important;
+}
